--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,17 +25,17 @@ jobs:
             - dotnet-packages-v1-{{ checksum "circleci-demo-windows.csproj" }}
       - run:
           name: "Install project dependencies"
-          command: dotnet.exe restore
+          command: .\start.bat
       - save_cache:
           paths:
             - C:\Users\circleci\project\HelloWorld\.nuget\packages
           key: dotnet-packages-v1-{{ checksum "circleci-demo-windows.csproj" }}
       - run:
           name: "Run Build step"
-          command: dotnet.exe publish -c Release -r win10-x64
+          command: .\hash.exe -h
       - run:
           name: "Test the executable"
-          command: .\bin\Release\netcoreapp2.1\win10-x64\publish\circleci-demo-windows.exe 
+          command: .\start.bat
       - store_artifacts:
           path: .\bin\Release\netcoreapp2.1\win10-x64\publish\circleci-demo-windows.exe
 
@@ -62,18 +62,13 @@ jobs:
           name: Run winappdriver in background
           background: true
           command: | 
-              cd "C:\Program Files (x86)\Windows Application Driver\"
-              Start-Process -FilePath "WinAppDriver.exe" -Wait
+              .\start.bat
       - run:
           name: Restore and build
           command: |
-            cd NotepadTest
-            nuget restore
-            cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\msbuild\current\bin\"
-            .\msbuild.exe "C:\Users\circleci\project\NotepadTest\NotepadTest.csproj"
+            .\start.bat
       - run: 
           name: Run UI tests
           command: |
-              cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\common7\ide\extensions\TestPlatform"
-              .\vstest.console.exe C:\Users\circleci\project\NotepadTest\bin\debug\NotepadTest.dll
+              .\start.bat
  
